Add post_position endpoint; fix swagger reset password endpoints
