# docs/swagger/swagger.json
@@ -79,14 +79,14 @@
                         "description": "Success: schemaless add company success",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/model.AddCompanyRequest"
+                            "$ref": "#/definitions/model.AddCompanyResponseSuccess"
                         }
                     },
                     "400": {
                         "description": "Failure: schemaless add company fail",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/model.AddCompanyRequestError0"
+                            "$ref": "#/definitions/model.AddCompanyResponseError0"
                         }
                     }
                 }
@@ -116,14 +116,14 @@
                         "description": "Success: schemaless add school success",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/model.AddSchoolRequest"
+                            "$ref": "#/definitions/model.AddSchoolResponseSuccess"
                         }
                     },
                     "400": {
                         "description": "Failure: schemaless add school fail",
                         "schema": {
                             "type": "object",
-                            "$ref": "#/definitions/model.AddSchoolRequestError0"
+                            "$ref": "#/definitions/model.AddSchoolResponseError0"
                         }
                     }
                 }
@@ -176,6 +176,43 @@
             "get": {
                 "description": "GetAllSchools is an endpoint that returns schools list from schemaless database",
                 "summary": "Get All Schools"
+            }
+        },
+        "/post_position": {
+            "post": {
+                "description": "PostPosition is an endpoint called when an applicant create a referral position with dedicated JSON.",
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "PostPosition",
+                "parameters": [
+                    {
+                        "description": "PostPositionRequest is a POST JSON type",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.PostPositionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success: verification email sent",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.PostPositionResponseSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "construct cell failure",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.PostPositionResponseAPIError1"
+                        }
+                    }
+                }
             }
         },
         "/referrer_check_signup_email": {
@@ -410,12 +447,21 @@
                 }
             }
         },
-        "model.AddCompanyRequestError0": {
+        "model.AddCompanyResponseError0": {
             "type": "object",
             "properties": {
                 "error": {
                     "type": "string",
                     "example": "schemaless add company fail"
+                }
+            }
+        },
+        "model.AddCompanyResponseSuccess": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "status 200"
                 }
             }
         },
@@ -432,12 +478,21 @@
                 }
             }
         },
-        "model.AddSchoolRequestError0": {
+        "model.AddSchoolResponseError0": {
             "type": "object",
             "properties": {
                 "error": {
                     "type": "string",
                     "example": "schemaless add school fail"
+                }
+            }
+        },
+        "model.AddSchoolResponseSuccess": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "status 200"
                 }
             }
         },
@@ -474,6 +529,54 @@
                 "message": {
                     "type": "string",
                     "example": "verification email sent"
+                }
+            }
+        },
+        "model.PostPositionRequest": {
+            "type": "object",
+            "properties": {
+                "Company": {
+                    "type": "string",
+                    "example": "Uber"
+                },
+                "Description": {
+                    "type": "string",
+                    "example": "Build a microservice platform for Uber. A position require microservice knowledge and past experience in Golang."
+                },
+                "Position": {
+                    "type": "string",
+                    "example": "Software Engineer"
+                },
+                "Username": {
+                    "type": "string",
+                    "example": "chaoran@Uber.com"
+                }
+            }
+        },
+        "model.PostPositionResponseAPIError0": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "username does not exist"
+                }
+            }
+        },
+        "model.PostPositionResponseAPIError1": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "construct cell failure"
+                }
+            }
+        },
+        "model.PostPositionResponseSuccess": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Success: status 200"
                 }
             }
         },
